# rs-ptybridge

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  PROTOCOL.md  README.md  build.rs  deno.json  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
examples/: jsonl_render.ts  msgpack_render.ts  passthrough.ts  reference_render.rs  scrollback_render.ts
src/: cli.rs  control.rs  engine.rs  hlcache.rs  lib.rs  main.rs  palette.rs  protocol.rs  pty.rs  render.rs  term.rs  transport.rs
src/transport/: codec.rs  stdio.rs
tests/: animation.rs  control.rs  msgpack.rs  property.rs  robustness.rs  snapshot.rs
tests/snapshots/: snapshot__alt_screen_mode_is_reported.snap  snapshot__ambiguous_width_chars_are_narrow.snap  snapshot__bell_is_reported.snap  snapshot__cjk_mixed_with_ascii.snap  snapshot__clear_then_reposition.snap  snapshot__colors_256_and_truecolor.snap  snapshot__combining_marks_join_their_base_cell.snap  snapshot__cursor_shape_bar_is_reported.snap  snapshot__dec_line_drawing_charset_maps_to_box_glyphs.snap  snapshot__erase_in_line_clears_to_end.snap  snapshot__hidden_cursor_is_reported_invisible.snap  snapshot__osc_title_is_reported.snap  snapshot__plain_text.snap  snapshot__regional_indicator_flag_is_two_cells.snap  snapshot__scroll_region_confines_scrolling.snap  snapshot__scrollback_push_carries_lines_that_left_the_screen.snap  snapshot__sgr_colors_define_highlights.snap  snapshot__skin_tone_modifier_is_a_separate_cell.snap  snapshot__two_lines_via_crlf.snap  snapshot__variation_selector_emoji_stays_narrow.snap  (+1 more)
(+2 files in other folders)
